almost done FPM3 specs

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -15,7 +15,7 @@ title-block-banner: true
 ## Assignments
 
 ::: {.callout-important}
-You will be building towards your final project deliverables -- a data-driven infographic & blog post -- throughout the quarter (see assignments that are noted as ***(final project)*** in the table, below). Those individual assignments will reference these [final project instructions](course-materials/assignments/final-project.qmd){target="_blank"}.
+You will be building towards your final project deliverables -- a data-driven infographic & blog post -- throughout the quarter (see **FPM** assignments in the table, below). Those individual assignments will reference these [final project instructions](course-materials/assignments/final-project.qmd){target="_blank"}.
 :::
 
 | Assignment Type         | Assignment Title                      | Date Assigned   | Date Due           |
