--- a/course-materials/assignments/FPM2.qmd
+++ b/course-materials/assignments/FPM2.qmd
@@ -42,16 +42,18 @@ Exploratory Data Analysis (EDA) is a critical first step in understanding your d
 [**After completing the above steps, answer the following questions:**]{.teal-text}
 
 - [ ] **1.** What have you learned about your data? Have any potentially interesting patterns emerged? Point to specific visualizations that you created as you describe your findings.
+
 - [ ] **2.** In FPM #1, you outlined some questions that you wanted to answer using these data. Have you made any strides towards answering those questions? If yes, how so? If no, what next steps do you need to take (e.g. I need to create X plot type, I still need to track down Y data, I need to restructure existing data so that you can visualize it in Z ways, etc.)? Have any new questions emerged?
+
 - [ ] **3.** What challenges do you foresee encountering with your data? These can be data wrangling and / or visualization challenges. 
 
 ## Rubric (specifications) {#rubric}
 
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for FPM #2:
+To receive a "Satisfactory" mark for FPM #2:        
 
 - [ ] **Perform all Part III steps** (as described above) in your `exploration.qmd` file.
 - [ ] **Answer all three Part IV questions** in your `exploration.qmd` file. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score. 
-- [ ] **Ensure that all three plot outputs appear**in your rendered doc.
+- [ ] **Ensure that all three plot outputs appear** in your rendered doc.
 - [ ] **Ensure that `exploration.qmd` is neatly organized** -- this does not need to be a perfectly polished document, but sections should be clearly labeled with prose and / or annotations so that we can easily follow along.
 - [ ] **Ensure that code chunks have appropriate chunk options set** (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.).
 - [ ] **Render `exploration.qmd`, then "print" and save as a PDF.** Double check that all of your outputs, code, and prose are visible.
