--- a/course-materials/assignments/FPM1.qmd
+++ b/course-materials/assignments/FPM1.qmd
@@ -54,7 +54,7 @@ Take care to not push any large data files (>2GB) to GitHub. Instead, add your d
 
 ## Rubric (specifications) {#specs}
 
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for FPM #1:
+To receive a "Satisfactory" mark for FPM #1:
 
 - [ ] **Create a GitHub repository named `yourLastName-eds240-infographic`.** This is where you'll be doing any / all work related to your final project. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
 - [ ] **Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) with the title, `HW1 - finding data / initial brainstorming`, and address the following in that issue:**
