--- a/course-materials/assignments/FPM3.qmd
+++ b/course-materials/assignments/FPM3.qmd
@@ -19,7 +19,7 @@ FPM #3 is the the third step in working towards your [final project](final-proje
 
 ### II. Create `drafting-viz.qmd` {#partII}
 
-[**Create an file named, `drafting-viz.qmd` within your `lastName-eds240-infographic` repo**]{.teal-text} and add appropriate YAML fields. You'll completing all sections of this assigment (Parts II-tbd) here.
+[**Create an file named, `drafting-viz.qmd` within your `lastName-eds240-infographic` repo**]{.teal-text} and add appropriate YAML fields. You'll completing all sections of this assigment (Parts III-VI) here.
 
 ### III. Some pre-planning {#partIII}
 
@@ -115,19 +115,29 @@ knitr::include_graphics("images/mkochuten-final.png")
 
 ## Rubric (specifications)
 
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for FPM #3:
+To receive a "Satisfactory" mark for FPM #3:
 
-::: {.callout-note}
-## A few notes on expectations
+- [ ] **Answer all Part III questions.** There are no strict length requirements for the free-response questions, however we expect that you answer them thoughtfully and fully. Your inspiration images (question #3) should be embedded correctly (and if using R code to embed them, apply the correct code chunk options to suppress the code itself from rendering).
+- [ ] **Include all three hand-sketched visualizatons, and optionally a tentative sketch of your full infographic (Part IV).** At a minimum, you must include three visualizations + any text (e.g. titles, axis labels, group labels) necessary for providing context. You don't need to be an artist, but your drawings and text should be clear enough for your instructors to understand. 
+- [ ] **Include all three code-based visualizations (Part IV).** These do not need to be in their perfect final form, but you should strive for complete visualizations as best you can. At a miminum, they should include any necessary text, appropriately-applied color(s), and updated themes. If you're unable to figure out how to implement pieces of these visualizations successfully using code, be sure to describe in writing where you're headed. All code used to build your visualizations must be visible in your rendered PDF (e.g. make sure code chunks remain expanded).
+- [ ] **Code in Part IV should follow appropriate styling conventions and include clear, informative annotations.** You don’t need to explain every line, but your annotations should make it easy to follow your thinking and understand important decisions in your code.
+- [ ] **Answer all Part V questions.** There are no strict length requirements for free-response questions, however we expect that you answer them thoughtfully and fully.
+- [ ] **Ensure that everything described above is included in your neatly-organized and polished `drafting-viz.qmd`** -- this includes appropriate document YAML (at a minimum, title, author, date), clearly labeled sections, appropriately-formatted prose, appropriate code chunk options (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.)
+- [ ] **Render `drafting-viz.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
+- [ ] **Upload your PDF to Gradescope** by 11:59pm on 02/25/2026.
 
-- Your visulizations don't have to be perfect, but the message you want your viz to convey should be clear. If you're unable to figure out how to implement that successfully in code, be sure to describe in writing where you're headed.
-- The more progress you make now, the more feedback we can provide ahead of FPM #4.
-- There are no strict length requirements for the free-response questions above, however we expect that you answer them thoughtfully and fully. 
-- Low-effort responses and visualizations will result in a "Not Yet" mark.
-:::
 
-- [ ] Complete all work in a file named, `HW3-drafting-viz.qmd`, which lives in your `lastName-eds240-HW4` repository -- you are welcome to draft / practice things in different files / scripts, but you must have all required elements of the assignment available in *this* file for us to reference and grade.
-- [ ] Add any necessary YAML options (title, author, date, etc.). You must also include the following options:
+
+- [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* visualizations render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). You should never print out entire data frames. *Please note that rendered documents that don't have appropriately specified chunk options will receive a "Not Yet" score.*
+- [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
+- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all 7 required parts).
+- [ ] Submit both an HTML *and* PDF version of your HW #3 via Gradscope by 11:59pm on Tue 02/25/2025 following these instructions:
+    - [ ] **To submit your HTML file:** Render your `HW3-drafting-viz.qmd`, verify that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. Submit your HTML file to the Gradscope assignment titled, "Homework 3 - HTML"
+    - [ ] **To submit your PDF file:** Convert your HTML to PDF by either **(a)** `Cmd / Ctrl` + `P` to Print > Save as PDF (easiest option), or **(b)** rendering your `HW3-drafting-viz.qmd` file directly to PDF. Submit your PDF file to Gradescope assignment titled, "Homework 3 - PDF"
+        - [ ] ***IMPORTANT:** If you have folded code chunks, please be sure to unfold them before saving as a PDF (to ensure that all code is visible)*
+
+
+<!-- - [ ] Add any necessary YAML options (title, author, date, etc.). You must also include the following options:
 
 ```{r}
 #| eval: false
@@ -139,15 +149,7 @@ format:
   html:
     embed-resources: true
 ---
-```
-
-- [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* visualizations render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). You should never print out entire data frames. *Please note that rendered documents that don't have appropriately specified chunk options will receive a "Not Yet" score.*
-- [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
-- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all 7 required parts).
-- [ ] Submit both an HTML *and* PDF version of your HW #3 via Gradscope by 11:59pm on Tue 02/25/2025 following these instructions:
-    - [ ] **To submit your HTML file:** Render your `HW3-drafting-viz.qmd`, verify that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. Submit your HTML file to the Gradscope assignment titled, "Homework 3 - HTML"
-    - [ ] **To submit your PDF file:** Convert your HTML to PDF by either **(a)** `Cmd / Ctrl` + `P` to Print > Save as PDF (easiest option), or **(b)** rendering your `HW3-drafting-viz.qmd` file directly to PDF. Submit your PDF file to Gradescope assignment titled, "Homework 3 - PDF"
-        - [ ] ***IMPORTANT:** If you have folded code chunks, please be sure to unfold them before saving as a PDF (to ensure that all code is visible)*
+``` -->
 
 <!-- ::: {.callout-note} -->
 <!-- ## A few notes on expectations -->
