--- a/course-materials/assignments/FPM4.qmd
+++ b/course-materials/assignments/FPM4.qmd
@@ -7,109 +7,29 @@ subtitle: "Assigned Wed 02/25/2026 | Due Sun 03/08/2026"
 TODO: revise assignment; add final Q about using genAI; update submission instructions to include upload to gradescope
 :::
 
-## Learning Outcomes {#LOs}
+## Description {description} 
 
-Your final assignment is meant to combine all of the course learning outcomes(!):
+### I. Review the final project instructions {#partI}
 
-- identify which types of visualizations are most appropriate for your data and your audience
-- prepare (e.g. clean, explore, wrangle) data so that it’s appropriately formatted for building data visualizations
-- build effective, responsible, accessible, and aesthetically-pleasing visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
-- write code from scratch and read and adapt code written by others
-- apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations 
-- assess, critique, and provide constructive feedback on data visualizations
+[**Reread the [final project description](final-project.qmd){target="_blank"} in full (one last time!)**]{.teal-text} to remind yourself of the goals and requirements. 
 
-## Description{#hw4-options} 
+### II. Review feedback and plan your revisions {#partII}
 
-Your final project consists of three parts. Please read all parts carefully:
+**Begin by reviewing the feedback you received on FPM #3 from your instructional team and from your in-lab peer reviews.** Make a short plan describing what specific changes you intend to make based on that feedback.
 
-### 1. Choose *one* of the following project options {#part1-choose}
+- [ ] **1.** Summarize the key feedback points you received on your FPM #3 draft visualizations.
+- [ ] **2.** Explain which of these suggestions you plan to implement and how.
+- [ ] **3.** Identify any areas where you decided *not* to follow feedback and explain why (e.g. “it didn’t align with my main message” or “I found a different design solution”).
 
-#### OPTION 1: Infographic {#option1-infographic}
+### III. Assemble your infographic {#partIII}
 
-::: {.callout-note collapse=true}
-## Option 1 (infograpic) details
 
-[**Build a cohesive infographic-style visualization that includes *at least three* different, but complementary visualizations that work together to tell a complete story. You should have one overarching question with (at least) three sub-questions which are addressed using each of the component pieces of the infographic.**]{.teal-text}
 
-Infographics are useful science communication pieces, which can serve a variety of audiences, but are particularly well-suited for engaging general audiences. An infographic typically exists to address one overarching question or idea, and it's subcomponents (e.g. visualizations, numbers, imagery) each help to tell part of the story (or in other words, help to answer sub-questions). While text is important in all visualizations, it can be particularly critical in weaving together all of your infographic elements to successfully convey your story. The order and orientation in which your elements are positioned will also be essential for creating a visual hierarchy that successfully guides your readers. 
+### IV. Write your blog post {#partIV}
 
-All component visualizations must be produced using code (e.g. leveraging the `{ggplot2}` package), but you may assemble your final infographic using a tool(s) / software of your choice. It is possible to create your infographic entirely in R (you may consider using the [`{patchwork}` package](https://patchwork.data-imaginist.com/) for stitching together different elements -- see [Ray Hunter's infographic](https://ramhunte.github.io/blogs/china_fishing/){target="_blank"}, or refer back to [HW #1](HW1.qmd#hw1-p1a){target="_blank"}). You may also consider tools like [Adobe Illustrator](https://www.adobe.com/products/illustrator.html){target="_blank"}, [Affinity](https://affinity.serif.com/en-us/){target="_blank"}, [Canva](https://www.canva.com/){target="_blank"}, or [Google Docs](https://docs.google.com/){target="_blank"} (there will be an optional class on Friday 02/07/2025 where you will learn how to use a number of these tools, led by [Dr. Alex Phillips](https://bren.ucsb.edu/people/alexandra-phillips){target="_blank"}).
 
-**A few examples from Winter 2024 submissions:**
 
-- [Who, What, Where?](https://lunacatalan.github.io/blog/2024-03-09-housing-la/images/infographic.png){target="_blank"}, by [Luna Catalán](https://lunacatalan.github.io/blog/2024-03-09-housing-la/){target="_blank"} (MEDS 2024)
-- [The World's Largest Fishing Fleet](https://ramhunte.github.io/blogs/china_fishing/images/final_fig.jpeg){target="_blank"}, by [Ray Hunter](https://ramhunte.github.io/blogs/china_fishing/){target="_blank"} (MESM 2024)
-- [Invertebrate Investigations](https://shmuir.github.io/projects/2024-03-09-georgia-marsh/final-infographic.png){target="_blank"}, by [Sam Muir](https://shmuir.github.io/projects/2024-03-09-georgia-marsh/){target="_blank"} (MEDS 2024)
-- [Feeling Buzzed](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/Feeling-buzzed.png){target="_blank"}, by [Melissa Widas](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"} (MEDS 2024)
-- [Are California Wildfires Truly Getting Worse?](https://amandaherbst.github.io/blog/2024-03-12-ca-wildfires/final_infographic.png){target="_blank"}, by [Amanda Herbst](https://amandaherbst.github.io/blog/2024-03-12-ca-wildfires/){target="_blank"} (MEDS 2024)
-
-**And a few more fun examples from other `{ggplot2}` creators:**
-
-- [UFO Sightings](https://github.com/doehm/tidytues?tab=readme-ov-file#week-25-ufo-sightings){target="_blank"}, by [Dan Oehm](https://github.com/doehm){target="_blank"} (from HW #1!)
-- [Numbats](https://github.com/doehm/tidytues?tab=readme-ov-file#week-10-numbats){target="_blank"}, by [Dan Oehm](https://github.com/doehm){target="_blank"}
-- [Haunted Places](https://github.com/doehm/tidytues?tab=readme-ov-file#week-41-haunted-places){target="_blank"}, by [Dan Oehm](https://github.com/doehm){target="_blank"}
-- [School Diversity](https://github.com/z3tt/TidyTuesday?tab=readme-ov-file#week-201939%EF%B8%8F-%EF%B8%8F-school-diversity-by-nces){target="_blank"}, by [Cédric Scherer](https://github.com/z3tt){target="_blank"}
-- [Allons-y to Gallifrey](https://twitter.com/thedivtagguy/status/1731323379171447048){target="_blank"}, by [Aman Bhargava](https://aman.bh/){target="_blank"}
-:::
-
-#### OPTION 2: Three viz, same question, different audiences {#option2-diff-audiences}
-
-::: {.callout-note collapse=true}
-## Option 2 (three viz) details
-
-[**Build three separate visualizations, each to serve a different target audience / purpose. Each visualization should use the same data to answer the same question, but how you choose to present those data should change based on the following:**]{.teal-text}
-
-1. **A visualization for technical writing / subject matter experts:** The purpose of this visualization is to clearly communicate key insights, trends, or patterns, and is one that could be published in a technical report or academic paper. These types of visualizations may include more details and domain-specific language. They should, however, still prioritize clarity by finding ways to highlight the most important takeaway message(s). Two great examples are Michael Mann's infamous ["Hockey Stick" graph](https://www.psu.edu/news/research/story/iconic-graph-center-climate-debate){target="_blank"}, and Figure 1 (*Unusual climate anomalies in 2023*) in [Ripple et al. 2023](https://doi.org/10.1093/biosci/biad080){target="_blank"}.
-
-2. **A visualization for policy- or decision-makers:** The purpose of this visualization is to balance clarity and insight with actionable and evidence-backed data to influence or inform policy decisions. A challenge is effectively communicating key insights, trends, forecasts, comparisons, etc. while remaining accessible to non-experts. These visuals often leverage clear, catchy titles, minimize potentially distracting design elements, present only the most essential data, and use text annotations to draw attention to key areas of a the graphic / help tell a story. A great example is Figure SPM.1(c) (*Adverse impacts from human-caused climate change will continue to intensify*) from the Intergovernmental Panel on Climate Change (IPCC)'s [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"} (see page 7).
-
-3. **A visualization for public outreach / a general audience:** The purpose of this visualization is to raise awareness, prompt discussion, or otherwise engage an audience who may not have domain-specific knowledge or expertise. These types of visuals should limit (or fully omit) the use of any jargon. They may display findings in an atypical but creative way, as well as blend both art and science. A great (and famous) example is [Ed Hawkins](https://research.reading.ac.uk/meteorology/people/ed-hawkins/){target="_blank"}' [Warming Strips](https://showyourstripes.info/s){target="_blank"}
-:::
-
-#### OPTION 3: Propose an alternative project idea {#option3-alternative}
-
-::: {.callout-note collapse=true}
-## Option 3 (propose an alternative) details
-
-[**I want this assignment to serve *you* and your goals -- if you're not excited about Options 1 or 2, you may choose to *propose* an alternative idea.**]{.teal-text} Please submit a brief (should not exceed 1 page) proposal at the time of your HW #1 submission. Your proposal must include / address:
-
-- a clear description of your proposed project
-- how you plan to incorporate at least three distinct data visualizations
-- the intended audience(s) of your data visualizations
-- any software or tools you'll need to use and / or learn (beyond the necessary data wrangling / plotting packages, e.g. `{tidyverse}`)
-- how this alternative project option serves your growth in the field of data visualization and communication
-
-*Please be aware that proposing an alternative project idea does not guarantee that it will be accepted as-is. You may be asked to modify your proposal to effectively meet EDS 240 final project requirements.* 
-:::
-
-[**Regardless of which option you choose, you are expected to consider all design elements discussed throughout the quarter, implement as appropriate, and justify your decisions.**]{.teal-text} These include, but are not limited to:
-
-1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other chart types and don't be afraid to get creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspiration){target="_blank"} to find inspiration)
-2. text (e.g. titles, captions, annotations, axis labels, axis text)
-3. themes (i.e. all non-data plot elements; these should be intentionally modified and visually-pleasing)
-4. colors
-5. typography
-6. general design (e.g. group order, spacing, text orientation, data-ink ratio, creating a visual hierarchy, avoiding information overload)
-7. contextualizing your data 
-8. centering your primary message
-9. considering accessibility (e.g. colorblind-friendly palettes / contrast, alt text) 
-10. applying a DEI lens to your design, as appropriate (e.g. considering the people / communities / places represented in your data, consider how you frame your questions / issue)
-
-<!-- [**In addition to producing your visualizations, you are expected to follow clean and organized coding practices:**]{.teal-text} -->
-
-<!-- - follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"}) -->
-<!-- - organize and annotate code (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"}) -->
-
-<!-- ::: {.callout-important} -->
-<!-- ## TODO -->
-<!-- revise / move this -->
-
-<!-- - apply the appropriate code chunk options (e.g. in most cases, code and outputs should be rendered but warnings and messages should not) -- see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more -->
-  <!-- - (optional) I recommend also applying the [`code-fold: true` option](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}, which collapses code chunks and makes it easier for readers to focus on your writing and embedded visualizations (while still allowing them to explore your code) -->
-
-<!-- ::: -->
-
-### 2. Share your design process in a blog post-style write up {#part2-write}
+- free of typos, grammatically correct
 
 You will share your data design process and decisions in a short, 1-2 page (~500-1,000 words) science communication blog post-style write up. Your writing should be structured as follows:
 
