--- a/course-materials/assignments/final-project.qmd
+++ b/course-materials/assignments/final-project.qmd
@@ -5,7 +5,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-::: {.callout-important}
+::: {.callout-note}
 This document outlines the overarching goals and outcomes of your EDS 240 Final Project. You will develop these final deliverables incrementally through a series of Final Project Milestones (FPM #1-5). Each of these milestones will be include detailed instructions and rubric specifications.
 :::
 
@@ -24,9 +24,9 @@ Your final project is meant to combine all of the course learning outcomes(!):
 
 ### Part I: Create a data-driven infographic {#partI}
 
-[**You will be building a cohesive data-driven, infographic-style visualization that includes *at least three* different, but complementary visualizations that work together to tell a complete story. You should have one overarching question with (at least) three sub-questions which are addressed using each of the component pieces of the infographic.**]{.teal-text}
+[**You will be building a cohesive, data-driven infographic that communicates a clear goal or message through at least three distinct but complementary visualizations. Each component of your infographic should help to illuminate that central goal by addressing specific questions or insights that, together, tell a complete and compelling story.**]{.teal-text}
 
-Infographics are useful science communication pieces, which can serve a variety of audiences, but are particularly well-suited for engaging general audiences. An infographic typically exists to address one overarching question or idea, and it's subcomponents (e.g. visualizations, numbers, imagery) each help to tell part of the story (or in other words, help to answer sub-questions). While text is important in all visualizations, it can be particularly critical in weaving together all of your infographic elements to successfully convey your story. The order and orientation in which your elements are positioned will also be essential for creating a visual hierarchy that successfully guides your readers through your story. 
+Infographics are powerful science communication tools that can serve a range of audiences, but they are particularly well-suited for engaging general audiences. An effective infographic is designed around a clear goal (e.g. [illumniating the gender gap in academic publishing](https://haylee360.github.io/posts/2025-03-11-gender-academia/images/hw4-eds240-sam-edits.png){target="_blank"}, [describing survival challenges faced by winter-run Chinook Salmon](https://nicolelpepper.github.io/blogs/2025-03-25-an-upstream-battle/images/an-upstream-battle-small.png){target="_blank"}, [exploring the role of an important but relatively-unknown pollinator](https://marinakochuten.github.io/blog-posts/hoverflies/Hover-fly-infographic.png){target="_blank"}). Each of its components (e.g. visualizations, numbers, imagery) should work together to illuminate that goal by answering specific, relevant questions that help reveal different facets of the story. While text plays an important role in all visualizations, it is especially critical in infographics for weaving together these elements into a cohesive narrative. The order, layout, and orientation of your elements will also be essential for creating a visual hierarchy that guides your audience through your story in a purposeful way.
 
 All component visualizations must be produced using code (e.g. leveraging the `{ggplot2}` package), but you may assemble your final infographic using a tool(s) / software of your choice. It is possible to create your infographic entirely in R (you may consider using the [`{patchwork}` package](https://patchwork.data-imaginist.com/) for stitching together different elements -- see [Ray Hunter's infographic](https://ramhunte.github.io/blogs/china_fishing/){target="_blank"}, or refer back to [HW #1](HW1.qmd#hw1-p1a){target="_blank"}). You may also consider tools like [Adobe Illustrator](https://www.adobe.com/products/illustrator.html){target="_blank"}, [Affinity](https://affinity.serif.com/en-us/){target="_blank"}, [Canva](https://www.canva.com/){target="_blank"}, or [Google Docs](https://docs.google.com/){target="_blank"} ([Dr. Alex Phillips](https://bren.ucsb.edu/people/alexandra-phillips){target="_blank"} will be leading a class on using Affinity Designer on [ADD DATE]).
 
