--- a/course-materials/assignments/FPM1.qmd
+++ b/course-materials/assignments/FPM1.qmd
@@ -19,9 +19,13 @@ FPM #1 is the the first step in working towards your [final project](final-proje
 
 [**Begin by reading the [final project description](final-project.qmd){target="_blank"} in full**]{.teal-text} so that you have a clear understanding of the goals and requirements. 
 
-### II. Find data and brainstorm questions {#partII}
+### II. Create a GitHub repository to house your final project work
 
-Now that you have a better understanding of where we're headed, let's make a bit of progress towards that end goal. [**This week, you'll focus on finding data that interest you and begin brainstorming some questions that you might explore / answer using those data.**]{.teal-text} Your data set(s) may be related to a past project, or even your current Capstone or GP. It may also be a completely new data set(s), unrelated to anything you're currently working on. Consider checkout out these [data sources](../../resources.qmd#data-sources){target="_blank"} if you need some inspiration on where to start (you are *not* limited to just these data sources).
+[**Create a GitHub repository named `eds240-infographic`.**]{.teal-text} This is where you'll be doing any / all work related to your final project. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file. Update your README with any relevant information (see the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/){target="_blank"}; you'll likely return to add more information as your project progresses).
+
+### III. Find data and brainstorm questions {#partIII}
+
+[**This week, you'll focus on finding data that interest you and begin brainstorming some questions that you might explore / answer using those data.**]{.teal-text} Your data set(s) may be related to a past project, or even your current Capstone or GP. It may also be a completely new data set(s), unrelated to anything you're currently working on. Some people have a goal or question(s) in mind first, which drives what data they seek out. Others choose to explore various data sources first, and build their questions around their chosen data. **Keep in mind that your infographic should be designed around a *clear goal*.** Consider checkout out these [data sources](../../resources.qmd#data-sources){target="_blank"} if you need some inspiration on where to start (you are *not* limited to just these data sources).
 
 ::: {.callout-tip}
 ## Asking the right question is *critical* and also one of the most challenging steps
@@ -32,18 +36,21 @@ I highly recommend checking out the following resources before diving in:
 - this TED talk titled, [The Power in Effective Data Storytelling](https://www.youtube.com/watch?v=0e52QfQngrM){target="_blank"}, by [Malavica Sridhar](https://www.linkedin.com/in/malavica-sridhar/){target="_blank"} (~15 min; yes, I know the audio gets a little wonky part-way through {{< fa face-smile title="a smiling face" >}})
 :::
 
-### III. Answer questions {#partIII}
+### IV. Reflect on your data, goal, and questions {#partIV}
 
-[**Once you've found your data set(s), answer the following questions:**]{.teal-text}
+[**Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) with the title, `FPM1 - finding data / initial brainstorming`, and add your responses to the following questions:**]{.teal-text}
 
-- [ ] **1.** Describe your data set(s). Be sure to address the following:
-    - [ ] **a.** Where did you find these data?
-    - [ ] **b.** What variables do these data contain? Is there sufficient metadata for understanding what those variables are?
-- [ ] **2.** What steps are involved in downloading or accessing the data (e.g. "I can download the data directly from this online portal (e.g. by clicking a button)," "I need to use an API to retrieve the data," "There's an R package with functions for accessing the API,"  "I collected these data myself from a past research project," etc.)?
-- [ ] **3.** What question(s) do you hope to answer using these data (remember to read over Enrico Bertini's [article](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"})? 
-- [ ] **4.** Will you need to combine multiple data sets to successfully answer your question(s)? If so, have you found all the necessary data? Do you have a way to combine it (e.g. matching key values across all data sets)?
+- [ ] **1** What is your **goal** with these data (conisder, what might be the goal of your infographic)? This goal may evolve as you continue working through your project.
 
-### IV. (OPTIONAL) Begin cleaning / wrangling your data
+- [ ] **2.** What **questions** do you hope to answer using these data (remember to read over Enrico Bertini's [article](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"})? Jot down at least three questions that could help to illuminate your goal. It's okay if these change later too (think of this as a starting point!).
+
+- [ ] **3.** Link to *and* describe your **data set(s)**. Be sure to address **(a)** where you found these data, and **(b)** what variables do these data contain, including if there is sufficienct metadata for understanding them?
+
+- [ ] **4.** What **steps are involved** in downloading or accessing the data (e.g. "I can download the data directly from an online portal," "I need to use an API," "There's an R package," "I collected these data myself," etc.)?
+
+- [ ] **5.** Will you need to **combine multiple data sets** to successfully answer your questions? If so, have you found all the necessary data? Do you have a way to combine it (e.g. matching key values across all data sets)?
+
+### V. (OPTIONAL) Begin cleaning / wrangling your data {#partV}
 
 This will be a focus of [FPM #2](FPM2.qmd){target="_blank"}, but if you're excited to dive in or are looking to get ahead, you should certainly take this time to do so!
 
@@ -56,16 +63,8 @@ Take care to not push any large data files (>2GB) to GitHub. Instead, add your d
 
 To receive a "Satisfactory" mark for FPM #1:
 
-- [ ] **Create a GitHub repository named `yourLastName-eds240-infographic`.** This is where you'll be doing any / all work related to your final project. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
-- [ ] **Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) with the title, `HW1 - finding data / initial brainstorming`, and address the following in that issue:**
-    - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for your final project.
-    - [ ] Answer all four Part III questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
-    - [ ] Ensure that your GitHub issue is neatly organized / formatted (you can use Markdown syntax here!).
-    - [ ] Tag your instructors (**[@samanthacsik](https://github.com/samanthacsik){target="_blank"}** & **[@annieradams](https://github.com/annieradams){target="_blank"}**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
+- [ ] **Create your `eds240-infographic` repository as described in in Part II.** At a minimum, your README should include an updated title and brief explanation of the repository’s purpose. You will update this README as you continue making progress on your project.
+- [ ] **Answer all five questions, as described in Part IV, in your `FPM1 - finding data / initial brainstorming` issue.** Be sure to link to (or otherwise prove the existence of) at least one data set that you plan to use for your final project. There are no strict length requirements for free-response questions, however we expect that you answer them thoughtfully and fully.
+- [ ] **Ensure that your GitHub issue is neatly organized.** Use markdown syntax, as appropriate, to organize and format your responses.
+- [ ] **Tag your instructors** ([@samanthacsik](https://github.com/samanthacsik){target="_blank"} & [@annieradams](https://github.com/annieradams){target="_blank"}) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
 - [ ] **Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1eCGNK4Bl2QHXZ0ucs0wYegm1BiNo9RyI8r17DyrNgM4/edit?gid=0#gid=0){target="_blank"}** by 11:59pm on Wed 01/21/2026.
-
-<br>
-
-<!-- ::: {.center-text .large-fa-icon .teal-text}
-{{< fa table title="A data table with two columns and two rows" >}} End FPM #1 {{< fa table title="A data table with two columns and two rows" >}}
-::: -->
